--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "panel"
     ],
     "dependencies": {
+        "@adobe/ccweb-add-on-sdk-types": "^1.7.0",
         "@swc-react/button": "0.39.4",
         "@swc-react/button-group": "^0.39.4",
         "@swc-react/field-label": "^0.39.4",
